==> spandan89/fatfs/diskio.c <==
#include "diskio.h"
#include "ff_gen_drv.h"
#define SDSC    0
#define SDHC    1
#define SDXC    2
#define BUFFER_SIZE 512

DSTATUS disk_initialize (
	BYTE pdrv				/* Physical drive nmuber to identify the drive */
)
{
  DSTATUS stat = RES_OK;
  
  uint8_t response[8];
  uint8_t card_type = 0;
  uint8_t count = 18;    // Try command this many time

/*
  if(disk.is_initialized[pdrv] == 0)
  { 
    disk.is_initialized[pdrv] = 1;
    stat = disk.drv[pdrv]->disk_initialize(disk.lun[pdrv]);
  }     */

    // Disable CS
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);

    // send 74 clock cycles or more
    for(int i=0; i<15; i++)
    {
            HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    }

    // Enable CS
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
    
    do
    {
        HAL_Delay(1);
      
        // Send CMD0 = 0x00
        sd_command(cmd[0], 0x00000000);
        
        // Send dummy 0xFF
        HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);

        HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    } while(rcv[0] !=0x01);
    
    // It is expected to send extra clock cycles to card so that card can finish it work
    HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    
    // every command transcation should end with CS disable
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);
  
  HAL_Delay(1);
  
    // Decide Card type
    {
      // Enable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
      
      //HAL_Delay(1);       // Provide no clock and MISO line is HIGH
      sd_command(cmd[1], 0x000001AA);     // CMD8 =0x08
      
      for(uint8_t i=0; i<8;i++)
      {
        response[i] = response_R7();
      }
      
      if(rcv[0] == 0x05 )
      {
        // card is of type SDC v1 or MMVC v3
        HAL_GPIO_WritePin(GPIOC, GPIO_PIN_8, GPIO_PIN_SET);       // Red LED on
      }
      else if(response[5]== 0xAA)
      {
        // check if response is R1 + 32 bits
        // check the lower 12 bits. That should equal to 0x1AA
        // if it is then the card type is SDC v2 and can work at voltage range 2.7-3.6
        HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_SET);       // Ob board LED
        HAL_Delay(500);
        HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_RESET);
        card_type = SDHC;
      }
      // Disable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);
    }
    
  HAL_Delay(1);
  
    // Send ACMD41 with HCS bit 1
    do
    {
      count = count - 1;
      
      HAL_Delay(1);
      
      // Enable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
      
      // Send CMD55 first and then ACMD41
      sd_command(cmd[2],0x00000000);    // CMD55 55=0x77

      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
            
      sd_command(cmd[3],0x40000000);    // ACMD41 41=0x69

      for(uint8_t i=0; i<8;i++)
      {
        if(response_R1() == 0x00)
        {
          HAL_GPIO_WritePin(GPIOC, GPIO_PIN_8, GPIO_PIN_SET);     // Red LED ON = Response 0x00 rcvd;
          count = 0;      // WHEN THE RESPONSE R1 CHANGES FROM 0X01 TO 0X00, WE SHOULD BREAK THE DO WHILE LOOP
          break;          // AS WELL. SO WHEN THAT HAPPENS, SET THE COUNT = 0. THIS WILL MAKE THE DO WHILE LOOP INVALID
        }
      }
      
      // Send extra 0xFF before ending
      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
      
      // Disable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);
    }while(count > 0);
    
  HAL_Delay(1);
  
    // CMD58 OCR Register. Response is R1 + 32 bits.
    // [----R1---] [Version] ----- [-Rsv-] ---- [Voltage] ---- [check_pattern]
    // [39-----31] [30---28] ----- [27-12] ---- [11----8] ---- [7-----------0]
    // Check bit 30 in the response. bit 30 is Card capacity status CCS
    // if CCS = 0 => card type is SDSC. 
    // if CCS = 1 => card stype is SDHC.
    {
      // Enable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
      
      // Send CMD58 0x7A
      sd_command(cmd[4],0x00000000);
      
      // Get the R3 reponse
      for(uint8_t i=0; i<8;i++)
      {
        response[i] = response_R7();
      }
      
      // Check the CCS bit.
      if((response[2] & 0xC0) != 0x00)
      {
        HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_SET); // on board LED should be on
        card_type = SDHC;
      }
      else
      {
        card_type = SDSC;
      }
      
      // Disable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);
    }
  
  HAL_Delay(1);
    
    // Set the block size to 512 bytes
    {
      // Enable CS
      HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
      
      // Send CMD16. Argument represents block size
      // CMD16 = 0x50 Set the block length 512 bytes
      sd_command(cmd[5], 0x00000200);
      
      // Check the Response. Should be 0x00 if successful
      for(uint8_t i=0; i<8; i++)
      {
        // Send few 0xFF and monitor response
        // when response = 0x00 => break the loop
        if(response_R1() != 0x00)
        {
          HAL_GPIO_WritePin(GPIOC, GPIO_PIN_8, GPIO_PIN_SET); // Red LED should not turn off 
        }
        else
        {
          HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_RESET);       // On board LED should be off
          break;
        }
      }
      
      // Send extra FF before ending the command
      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
      
    }
    
  // Disbale CS
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);

  // This calls USER_initialize function and in that
  // stat variable is set to STA_NOINIT which is problem
    if(disk.is_initialized[pdrv] == 0)
  { 
    disk.is_initialized[pdrv] = 1;
    stat = disk.drv[pdrv]->disk_initialize(disk.lun[pdrv]);
  }
  
  return stat;  // keep this as it is
}

DRESULT disk_read (
	BYTE pdrv,		/* Physical drive nmuber to identify the drive */
	BYTE *buff,		/* Data buffer to store read data */
	DWORD sector,	        /* Sector address in LBA */
	UINT count		/* Number of sectors to read */
)
{
  DRESULT res;
 
  res = disk.drv[pdrv]->disk_read(disk.lun[pdrv], buff, sector, count);
  
// Check how many sectors to read
  if(count == 1)
    sd_read_single_block(buff, sector); // CS HIGH done inside this function
  else
  {
    sd_read_multiple_block(buff, sector, count);  // CS HIGH done inside this function
    
    HAL_Delay(50);      // May be wait is required
    
    // Enable CS
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
    
    // STOP the Transmission CMD12 = 0x4C 00 00 00 00 01
    sd_command(cmd[8], 0x00000000); // R1b response

    // Send extra FF and ignore the response
    HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    
    // Extra FF
    HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    
    /*// I should wait for MISO line to go high again
    do
    {
      HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    }while(rcv[0]!=0xFF);
    */
    
    // Disable CS
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);
  }
    return res;
    //return RES_OK;
}

DRESULT disk_write (
	BYTE pdrv,		/* Physical drive nmuber to identify the drive */
	const BYTE *buff,	/* Data to be written */
	DWORD sector,		/* Sector address in LBA */
	UINT count        	/* Number of sectors to write */
)
{
  DRESULT res;
  
  res = disk.drv[pdrv]->disk_write(disk.lun[pdrv], buff, sector, count);
  
  // Check how many sectors to write
  if(count == 1)
    sd_write_single_block(buff, sector);
  else
    // Stop Transaction command is included inside write block function
    sd_write_multiple_block(buff, sector, count); 
  
  return res;
  //return RES_OK;
}

DRESULT disk_ioctl (
	BYTE pdrv,		/* Physical drive nmuber (0..) */
	BYTE cmd,		/* Control code */
	void *buff		/* Buffer to send/receive control data */
)
{
  DRESULT res;

  res = disk.drv[pdrv]->disk_ioctl(disk.lun[pdrv], cmd, buff);
  
  switch(cmd)
  {
    /* flush dirty buffer if present */
  case CTRL_SYNC:
    // Enable CS
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_RESET);
    
    // Send FF to see if its ready
    // if it is then you'll get FF back
    HAL_SPI_TransmitReceive(&hspi2,(uint8_t*) msg,(uint8_t*) rcv, 1, 2000);
    if(rcv[0]==0xFF)
    {
      res = RES_OK;
    }
    break;
    
  default:
    res = RES_PARERR;
    break;
    
  }
  
  // Disable CS
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_1, GPIO_PIN_SET);
  
  return res;
}
